--- a/hystrix-provider-dev.yml
+++ b/hystrix-provider-dev.yml
@@ -1,22 +1,13 @@
 server:
-  port: 9900
-
-eureka:
-  instance:
-    hostname: localhost # 主机名
-    prefer-ip-address: true # 将当前实例的 ip 注册到 eureka server 中。默认是 false 注册主机名
-    ip-address: 127.0.0.1 # 设置当前实例的ip
-    instance-id: ${eureka.instance.ip-address}:${spring.application.name}:${server.port} # 设置web控制台显示的 实例id
-    lease-renewal-interval-in-seconds: 3 # 每隔3 秒发一次心跳包
-    lease-expiration-duration-in-seconds: 9 # 如果9秒没有发心跳包，服务器呀，你把我干掉吧~
-
-  client:
-    service-url:
-      # eureka服务端地址，将来客户端使用该地址和eureka进行通信
-      defaultZone: http://localhost:8761/eureka
-      register-with-eureka: true # 是否将自己的路径注册到 eureka 上，默认为 true。
-      fetch-registry: true # 是否需要从 eureka 中抓取数据，默认为 true。
+  port: 7020
 
 spring:
   application:
-    name: hystrix-provider # 设置 当前应用的名称。将来会在 eureka 中 Application 显示。将来需要使用该名称来获取路径
+    name: config-client
+
+eureka:
+  client:
+    service-url:
+      defaultZone: localhost:8761/eureka
+      
+message: hello
