--- a/hystrix-provider-dev.yml
+++ b/hystrix-provider-dev.yml
@@ -8,6 +8,6 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: localhost:8761/eureka
+      defaultZone: http://localhost:8761/eureka
       
 message: hello
